--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -4,11 +4,14 @@
     </head>
     <body>
         <h1>Headlines</h1>
+        <form>
+            <input type="text" name="publication" placeholder="search" />
+            <input type="submit" value="Submit" />
+        </form>
         {% for article in articles %}
-            <b><a href="{{article.link}}" target="_blank">{{article.title}}</a></b><br />
+            <b><a href="{{article.link}}" target="_blank">{{article.title}}</b></a><br />
             <i>{{article.published}}</i><br />
             <p>{{article.summary}}</p>
-            <hr />
-        {% endfor %}    
+        {% endfor %}
     </body>
 </html>
