--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -4,6 +4,18 @@
     </head>
     <body>
         <h1>Headlines</h1>
+        
+        
+        <h2>Current weather</h2>
+        <form>
+            <input type="text" name="city" placeholder="weather search">
+            <input type="submit" value="Submit">
+        </form>
+        <p>City: <b>{{weather.city}}</b></p> 
+        <p>{{weather.description}} | {{weather.temperature}}&#8451;</p> 
+        
+
+        <h2>Headlines</h2>
         <form>
             <input type="text" name="publication" placeholder="search" />
             <input type="submit" value="Submit" />
