--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -11,9 +11,29 @@
             <input type="text" name="city" placeholder="weather search">
             <input type="submit" value="Submit">
         </form>
-        <p>City: <b>{{weather.city}}</b></p> 
+        <p>City: <b>{{weather.city}}, {{weather.country}}</b></p> 
         <p>{{weather.description}} | {{weather.temperature}}&#8451;</p> 
         
+        <h2>Currency</h2>
+        <form>
+            from: 
+            <select name="currency_from">
+                <option value="CAD">CAD</option>
+                <option value="GBP">GBP</option>
+                <option value="EUR">EUR</option>
+                <option value="USD">USD</option>
+            </select>
+            to: 
+            <select name="currency_to">
+                <option value="USD">USD</option>
+                <option value="GBP">GBP</option>
+                <option value="EUR">EUR</option>
+                <option value="CAD">CAD</option>
+            </select>
+            <input type="submit" value="Submit">
+        </form>
+
+        1 {{currency_from}} = {{currency_to}} {{rate}}
 
         <h2>Headlines</h2>
         <form>
