--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -18,17 +18,17 @@
         <form>
             from: 
             <select name="currency_from">
-                <option value="CAD">CAD</option>
-                <option value="GBP">GBP</option>
-                <option value="EUR">EUR</option>
-                <option value="USD">USD</option>
+                {% for currency in currencies %}
+                    <option value="{{currency}}" {{'selected="selected"' if currency_from==currency}}>
+                    {{currency}}</option>
+                {% endfor %}
             </select>
             to: 
             <select name="currency_to">
-                <option value="USD">USD</option>
-                <option value="GBP">GBP</option>
-                <option value="EUR">EUR</option>
-                <option value="CAD">CAD</option>
+                {% for currency in currencies %}
+                    <option value="{{currency}}" {{'selected="selected"' if currency_to==currency}}>
+                    {{currency}}</option>
+                {% endfor %}
             </select>
             <input type="submit" value="Submit">
         </form>
