Handled an error for the case of articles with no summary entry

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,51 +1,7 @@
 <html>
     <head>
         <title>Headlines</title>
-        <!-- <link rel="stylesheet" href="{{ url_for('home', filename='static/styles/home.css') }}"> -->
-        <style type="text/css">
-            html{
-                font-family: "Helvetica";
-                background: white;
-            }   
-
-            body{
-                background: lightgrey;
-                max-width: 900px;
-                margin: 10 auto;
-            }
-
-            #header{
-                padding-top: 5;
-                background: lightsteelblue;
-            }
-
-            #inner-header {
-                padding-left: 10;
-            }
-
-            #main {
-                padding-left: 10;
-            }
-
-            input[type="text"], select {
-                color: grey;
-                border: 1px solid lightsteelblue;
-                height: 30px;
-                line-height:15px;
-                margin: 2px 6px 16px 0px;
-            }
-            input[type="submit"] {
-                padding: 5px 10px 5px 10px;
-                color: black;
-                background: lightsteelblue;
-                border: none;
-                box-shadow: 1px 1px 1px #4C6E91;
-            }
-            input[type="submit"]:hover{
-                background: steelblue;
-            }
-
-        </style>
+        <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='styles/home.css') }}">
     </head>
     <body>
         <div id="header">
